catkin_ws/logs/frontend/build.make.011.log
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_cpp
[35m[1mScanning dependencies of target SLAM[0m
[  0%] Built target rosgraph_msgs_generate_messages_py
[  5%] [32mBuilding CXX object CMakeFiles/SLAM.dir/src/Mapping.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:275:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:510:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::updateMap()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:733:36: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i = 0; i < keyFrames.size(); ++i)
                                    ^
[ 10%] [32m[1mLinking CXX shared library /home/tuofeichen/SLAM/MAV-Project/catkin_ws/devel/lib/libSLAM.so[0m
[ 90%] Built target SLAM
[35m[1mScanning dependencies of target frontend[0m
[ 95%] [32mBuilding CXX object CMakeFiles/frontend.dir/src/main.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:264:59: error: ‘DEBUG_NEW’ was not declared in this scope
    if ((frame.getKeypoints().size()>0)&&((frame.getId()== DEBUG_NEW)||(frame.getId()==DEBUG_OLD)))
                                                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:264:87: error: ‘DEBUG_OLD’ was not declared in this scope
    if ((frame.getKeypoints().size()>0)&&((frame.getId()== DEBUG_NEW)||(frame.getId()==DEBUG_OLD)))
                                                                                       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:266:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints3D().size();i++)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:272:50: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i< frame.getKeypoints().size();i++)
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:280:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/main.cpp:308:44: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i<slam.getNodes().size();i++)
                                            ^
make[2]: *** [CMakeFiles/frontend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
